<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/black">


    <TextView
        android:id="@+id/introTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/cinema_ticket_booking"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/introTitleDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:maxLines="4"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="@string/discover_and_book_the_latest_nmovies_at_your_favorite_cinemas_n_easy_and_fast"
        app:layout_constraintBottom_toTopOf="@+id/buttonGetStarted"
        app:layout_constraintEnd_toEndOf="@+id/buttonGetStarted"
        app:layout_constraintStart_toStartOf="@+id/buttonGetStarted" />

    <ImageView
        android:id="@+id/imageIntroLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/intro_logo"
        app:layout_constraintBottom_toTopOf="@+id/introTitleDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonGetStarted"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/get_started_bg"
        android:text="@string/get_started"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>