<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/authScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.10" />

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/intro_logo"
                app:layout_constraintTop_toTopOf="@id/guideline_top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- ### ЛОГИН ### -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/loginLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                app:layout_constraintTop_toBottomOf="@id/logoImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/loginTitle"
                    style="@style/AuthTitle"
                    android:text="@string/welcome_back"
                    android:textAlignment="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/loginSubtitle"
                    style="@style/AuthSubtitle"
                    android:text="@string/sign_in_to_continue"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@id/loginTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp" />

                <!-- Поле Email для логина -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/loginEmailLayout"
                    style="@style/AuthInputLayout"
                    android:layout_marginTop="32dp"
                    android:hint="@string/email"
                    app:startIconDrawable="@drawable/ic_email"
                    app:layout_constraintTop_toBottomOf="@id/loginSubtitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:inputType="textEmailAddress"/>

                </com.google.android.material.textfield.TextInputLayout>

                <!-- Поле Пароль для логина -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/loginPasswordLayout"
                    style="@style/AuthInputLayout"
                    android:layout_marginTop="16dp"
                    android:hint="@string/password"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:endIconMode="password_toggle"
                    app:layout_constraintTop_toBottomOf="@id/loginEmailLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:padding="8dp"
                    app:layout_constraintTop_toBottomOf="@id/loginPasswordLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonLogin"
                    style="@style/AuthButton"
                    android:text="@string/login"
                    app:layout_constraintTop_toBottomOf="@id/forgotPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="24dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- ### РЕГИСТРАЦИЯ ### -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/registerLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="48dp"
                app:layout_constraintTop_toBottomOf="@id/logoImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/registerTitle"
                    style="@style/AuthTitle"
                    android:text="@string/create_account"
                    android:textAlignment="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/registerSubtitle"
                    style="@style/AuthSubtitle"
                    android:text="@string/join_us_and_explore_movies"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@id/registerTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp" />

                <!-- Поле Имя для регистрации -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registerNameLayout"
                    style="@style/AuthInputLayout"
                    android:layout_marginTop="32dp"
                    android:hint="@string/full_name"
                    app:startIconDrawable="@drawable/ic_person"
                    app:layout_constraintTop_toBottomOf="@id/registerSubtitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:inputType="textPersonName"/>

                </com.google.android.material.textfield.TextInputLayout>

                <!-- Поле Email для регистрации -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registerEmailLayout"
                    style="@style/AuthInputLayout"
                    android:layout_marginTop="16dp"
                    android:hint="@string/email"
                    app:startIconDrawable="@drawable/ic_email"
                    app:layout_constraintTop_toBottomOf="@id/registerNameLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:inputType="textEmailAddress"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registerPasswordLayout"
                    style="@style/AuthInputLayout"
                    android:layout_marginTop="16dp"
                    android:hint="@string/password"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:endIconMode="password_toggle"
                    app:layout_constraintTop_toBottomOf="@id/registerEmailLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonRegister"
                    style="@style/AuthButton"
                    android:text="@string/sign_up"
                    app:layout_constraintTop_toBottomOf="@id/registerPasswordLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="32dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/goToSignUpLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/grey"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/goToSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/goToLoginLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="16dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/grey"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/goToLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>